--- a/homepage.html
+++ b/homepage.html
@@ -57,8 +57,8 @@
 
 <body>
     <div class="button-container">
-        <a href="flashcards.html" class="button">Flash Cards</a>
-        <a href="fillintheblank.html" class="button">Fill in the Blank</a>
+        <a href="flashCard.html" class="button">Flash Cards</a>
+        <a href="fillinBlank.html" class="button">Fill in the Blank</a>
     </div>
 </body>
 
