--- a/flashCard.html
+++ b/flashCard.html
@@ -203,10 +203,10 @@
             <div class="timer">30</div>
             <div class="card" onclick="toggleCard()">
                 <div class="card-face card-front">
-                    <h2 id="question">Loading...</h2>
+                    <h2 id="english">Loading...</h2> 
                 </div>
                 <div class="card-face card-back">
-                    <h2 id="answer">Loading...</h2>
+                    <h2 id="german">Loading...</h2>
                 </div>
             </div>
             <button class="read-btn" onclick="readCardContent()">🔊</button>
@@ -217,114 +217,126 @@
     </div>
 
     <script>
-    let data;
-    let currentCardIndex = 0;
-    let timerInterval;
-    let isGermanToEnglish = true;
+        let data;
+        let currentCardIndex = 0;
+        let timerInterval;
+        let isGermanToEnglish = true;
 
-    async function fetchData(file) {
-        const response = await fetch('https://raw.githubusercontent.com/luckyhamor/flashcards/main/' + file);
-        return await response.json();
-    }
+        async function fetchData(file) {
+            const response = await fetch('https://raw.githubusercontent.com/luckyhamor/flashcards/main/' + file);
+            return await response.json();
+        }
 
-    async function showCard(index) {
-        const question = document.getElementById('question');
-        const answer = document.getElementById('answer');
+        async function showCard(index) {
+            const english = document.getElementById('english');
+            const german = document.getElementById('german');
 
-        if (data && data[index]) {
-            if (isGermanToEnglish) {
-                question.innerText = data[index].question;
-                answer.innerText = data[index].answer;
+            if (data && data[index]) {
+                if (isGermanToEnglish) {
+                    english.innerText = data[index].english; // Changed from data[index].question
+                    german.innerText = data[index].german; // Changed from data[index].answer
+                } else {
+                    english.innerText = data[index].german; // Changed from data[index].answer
+                    german.innerText = data[index].english; // Changed from data[index].question
+                }
+            }
+        }
+
+        async function loadData(file, event) {
+            data = await fetchData(file);
+            if (data) {
+                currentCardIndex = 0; // Reset current card index
+                shuffleData(); // Shuffle the data array
+                showCard(currentCardIndex); // Show the first card when data is loaded
+                startTimer(); // Start the timer
+            }
+            // Remove 'selected' class from all buttons
+            document.querySelectorAll('.btn').forEach(btn => btn.classList.remove('selected'));
+            // Add 'selected' class to the clicked button
+            event.target.classList.add('selected');
+        }
+
+        function shuffleData() {
+            for (let i = data.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [data[i], data[j]] = [data[j], data[i]];
+            }
+        }
+
+        function nextCard() {
+            currentCardIndex++;
+            if (currentCardIndex < data.length) {
+                showCard(currentCardIndex);
+                startTimer(); // Start the timer again
             } else {
-                question.innerText = data[index].answer;
-                answer.innerText = data[index].question;
+                // All cards have been shown, display "GOOD JOB!" message
+                const english = document.getElementById('english');
+                english.innerText = "GOOD JOB!";
+                const german = document.getElementById('german');
+                german.innerText = "";
+                stopTimer(); // Stop the timer
             }
         }
-    }
 
-    async function loadData(file, event) {
-        data = await fetchData(file);
-        if (data) {
-            currentCardIndex = 0; // Reset current card index
-            shuffleData(); // Shuffle the data array
-            showCard(currentCardIndex); // Show the first card when data is loaded
-            startTimer(); // Start the timer
+        function startTimer() {
+            clearInterval(timerInterval);
+            let timerDisplay = document.querySelector('.timer');
+            let seconds = 30; // 1 minute
+            timerInterval = setInterval(() => {
+                seconds--;
+                let minutes = Math.floor(seconds / 60);
+                let remainingSeconds = seconds % 60;
+
+                timerDisplay.textContent = `${remainingSeconds < 10 ? '0' : ''}${remainingSeconds}`;
+
+                if (seconds <= 0) {
+                    clearInterval(timerInterval);
+                    nextCard(); // Move to the next card when the timer runs out
+                    startTimer(); // Start the timer again for the next card
+                }
+            }, 1000);
         }
-        // Remove 'selected' class from all buttons
-        document.querySelectorAll('.btn').forEach(btn => btn.classList.remove('selected'));
-        // Add 'selected' class to the clicked button
-        event.target.classList.add('selected');
-    }
 
-    function shuffleData() {
-        for (let i = data.length - 1; i > 0; i--) {
-            const j = Math.floor(Math.random() * (i + 1));
-            [data[i], data[j]] = [data[j], data[i]];
+        function stopTimer() {
+            clearInterval(timerInterval);
+            let timerDisplay = document.querySelector('.timer');
+            timerDisplay.textContent = "30"; // Reset the timer display
         }
-    }
 
-    function nextCard() {
-        currentCardIndex++;
-        if (currentCardIndex < data.length) {
-            showCard(currentCardIndex);
-            startTimer(); // Start the timer again
-        } else {
-            // All cards have been shown, display "GOOD JOB!" message
-            const question = document.getElementById('question');
-            question.innerText = "GOOD JOB!";
-            const answer = document.getElementById('answer');
-            answer.innerText = "";
-            stopTimer(); // Stop the timer
+        function readFrontCard() {
+            const englishText = document.getElementById('english').innerText;
+            const utterance = new SpeechSynthesisUtterance(englishText);
+            utterance.lang = 'en-US';
+            utterance.rate = 0.9;
+            window.speechSynthesis.speak(utterance);
         }
-    }
 
-    function startTimer() {
-        clearInterval(timerInterval);
-        let timerDisplay = document.querySelector('.timer');
-        let seconds = 30; // 1 minute
-        timerInterval = setInterval(() => {
-            seconds--;
-            let minutes = Math.floor(seconds / 60);
-            let remainingSeconds = seconds % 60;
+        function readBackCard() {
+            const germanText = document.getElementById('german').innerText;
+            const utterance = new SpeechSynthesisUtterance(germanText);
+            utterance.lang = 'de-DE';
+            utterance.rate = 0.9;
+            window.speechSynthesis.speak(utterance);
+        }
 
-            timerDisplay.textContent = `${remainingSeconds < 10 ? '0' : ''}${remainingSeconds}`;
-
-            if (seconds <= 0) {
-                clearInterval(timerInterval);
-                nextCard(); // Move to the next card when the timer runs out
-                startTimer(); // Start the timer again for the next card
+        function readCardContent() {
+            if (isGermanToEnglish) {
+                document.querySelector('.card').style.transform === 'rotateY(0deg)' ? readFrontCard() : readBackCard();
+            } else {
+                document.querySelector('.card').style.transform === 'rotateY(0deg)' ? readBackCard() : readFrontCard();
             }
-        }, 1000);
-    }
+        }
+        function toggleCard() {
+            const card = document.querySelector('.card');
+            card.style.transform = card.style.transform === 'rotateY(180deg)' ? 'rotateY(0deg)' : 'rotateY(180deg)';
+        }
 
-    function stopTimer() {
-        clearInterval(timerInterval);
-        let timerDisplay = document.querySelector('.timer');
-        timerDisplay.textContent = "30"; // Reset the timer display
-    }
+        // Load initial data (Words level)
+        loadData('words.json', document.getElementById('level1'));
 
-    function readCardContent() {
-        const textToRead = isGermanToEnglish ? document.getElementById('question').innerText : document.getElementById('answer').innerText;
-        // Create a new SpeechSynthesisUtterance instance
-        const utterance = new SpeechSynthesisUtterance(textToRead);
-        utterance.lang = 'de-DE'; // Set language to German
-        utterance.rate = 0.9; // Decrease the speed of reading
-        // Speak the text
-        window.speechSynthesis.speak(utterance);
-    }
-
-
-    function toggleCard() {
-        const card = document.querySelector('.card');
-        card.style.transform = card.style.transform === 'rotateY(180deg)' ? 'rotateY(0deg)' : 'rotateY(180deg)';
-    }
-
-    // Load initial data (Words level)
-    loadData('words.json', document.getElementById('level1'));
-
-    // Apply clicked effect on the default (Words) level button
-    document.getElementById('level1').click();
-</script>
+        // Apply clicked effect on the default (Words) level button
+        document.getElementById('level1').click();
+    </script>
 
 </body>
 
