--- a/flashCard.html
+++ b/flashCard.html
@@ -195,7 +195,7 @@
     <div class="flashcard-container">
         <div class="btn-container">
             <button class="btn" onclick="loadData('words.json', event)" id="level1">Level 1</button>
-            <button class="btn" onclick="loadData('phrase.json', event)" id="level2">Level 2</button>
+            <button class="btn" onclick="loadData('phrases.json', event)" id="level2">Level 2</button>
             <button class="btn" onclick="loadData('sentence.json', event)" id="level3">Level 3</button>
             <button class="btn" onclick="loadData('conversation.json', event)" id="level4">Level 4</button>
         </div>
